@@ -142,14 +142,14 @@ public class SimpleTopNProjectorTest extends CrateUnitTest {
     @Test
     public void testNegativeOffset() {
         expectedException.expect(IllegalArgumentException.class);
-        expectedException.expectMessage("invalid offset");
+        expectedException.expectMessage("Invalid OFFSET");
         new SimpleTopNProjector(INPUTS, COLLECT_EXPRESSIONS, 10, -10);
     }
 
     @Test
     public void testNegativeLimit() {
         expectedException.expect(IllegalArgumentException.class);
-        expectedException.expectMessage("invalid limit");
+        expectedException.expectMessage("Invalid LIMIT");
         new SimpleTopNProjector(INPUTS, COLLECT_EXPRESSIONS, -100, TopN.NO_OFFSET);
     }
 
@@ -223,7 +223,7 @@ public class SimpleTopNProjectorTest extends CrateUnitTest {
     @Test
     public void testProjectNoLimitNoOffset() throws Throwable {
         expectedException.expect(IllegalArgumentException.class);
-        expectedException.expectMessage("invalid limit");
+        expectedException.expectMessage("Invalid LIMIT");
         CollectingRowReceiver rowReceiver = new CollectingRowReceiver();
 
         preparePipe(TopN.NO_LIMIT, TopN.NO_OFFSET, rowReceiver);
